--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <section>
         <h2>Contact Information</h2>
-        <p>Email: abhishek@example.com</p>
+        <p>Email: abhisheksemwal619@gmail.com</p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/abhishek" target="_blank">linkedin.com/in/abhishek</a></p>
         <p>GitHub: <a href="https://github.com/abhishek" target="_blank">github.com/abhishek</a></p>
     </section>
